@@ -30,9 +30,9 @@ stages:
     - if [[ -z $DISABLE_TESTS ]]; then cargo build --tests --target=$TARGET; fi
     - if [[ -z $DISABLE_TESTS ]]; then cargo test --target=$TARGET; fi
 
-x86_64-unknown-linux-gnu-1.31.1:
+x86_64-unknown-linux-gnu-1.34.2:
     <<: *build
-    image: "rust:1.31.1"
+    image: "rust:1.34.2"
     variables:
         EXTRA_PACKAGES: "libudev-dev"
         TARGET: x86_64-unknown-linux-gnu
